--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -100,7 +100,7 @@
 
   "sync.gist": "36906da77c4a35db830188264e988ed6",
 
-  "workbench.colorTheme": "Monokai Night",
+  "workbench.colorTheme": "Dark Magic Nord",
 
   "terminal.integrated.defaultProfile.windows": "Git Bash",
 
